Fix excessive spacing between footnote ref and content

--- a/src/App.css
+++ b/src/App.css
@@ -644,6 +644,7 @@ body {
 
 .footnoteReferenceNumber {
   vertical-align: middle;
+  margin-right: -25px;
 }
 
 .footnoteReferenceContent {
